package pt.isel.api_pm.domain.user

import kotlin.jvm.JvmInline

@JvmInline
value class PasswordHash(val value: String)