@startuml domain-classes
' Domain classes for api-performance-monitor

  class MonitoredEndpoint <<data>> {
    +id: UInt
    +name: String
    +createdAt: Instant
  }

  class User <<data>> {
    +id: UInt
    +username: Username
    +passwordHash: PasswordHash
    +createdAt: Instant
  }

  class RequestMetric <<data>> {
  +endpoint: EndpointUrl
  +timestamp: Instant
  +latency: Long
  +statusCode: Int
  }

  class EndpointUrl <<value>> {
    -value: String
    +normalized(): String
  }

  class IntervalSeconds <<value>> {
    -value: Long
  }

  class Username <<value>> {
    -value: String
  }

  class PasswordHash <<value>> {
    -value: String
  }

  class Password <<value>> {
    -value: String
  }

' Associations
MonitoredEndpoint --> EndpointUrl : url
MonitoredEndpoint --> IntervalSeconds : interval
MonitoredEndpoint --> User : owner
User --> Username : username
User --> PasswordHash : passwordHash
MonitoredEndpoint --> RequestMetric : metrics

' Notes / invariants
note right of EndpointUrl
  - must start with http:// or https://
  - length > 10
  - no spaces
  - normalized() removes trailing '/'
end note

note right of IntervalSeconds
  Allowed values: 60,120,180,300,600,900,1200,1800
end note

note right of Username
  length >= 3
end note

note right of Password
  length >= 6
  must contain uppercase
  must contain digit
end note

@enduml
